--- a/_includes/dc/who.html
+++ b/_includes/dc/who.html
@@ -1,8 +1,9 @@
 <p id="who">
   <strong>Who:</strong>
+  The course is aimed at researchers of every level
   The course is aimed at graduate students and other researchers.
   <strong>
-    You don't need to have any previous knowledge of the tools
-    that will be presented at the workshop.
+	  You will need to be familiar with Python in order
+	  to comfortably progress through the workshop
   </strong>
 </p>
